[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mlsys-notes"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "pyyaml>=6.0.2",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "C4",
]
ignore = [
    "E501",
]

[dependency-groups]
dev = [
    "black>=24.0.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.6",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.setuptools.packages.find]
where = ["."]
include = ["labs*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["labs"]
